--- a/translations/strings/ru.json
+++ b/translations/strings/ru.json
@@ -22,9 +22,15 @@
     "sent": {
         "title": "Отлично, теперь жми сюда, если ты всё уже дописал.",
         "description": "Keep it Quiet!",
-        "message_text": "Эй, @{tag}, тут {sender} отправил тебе сообщение. 🤫"
+        "message_text": "Эй, {tags}, тут {sender} отправил тебе сообщение. 🤫"
     },
-    "read": "Прочитать",
+    "moreThan10": {
+        "title": "Максимальное количество тэгов - 10.",
+        "description": "Keep it Quiet!",
+        "message_text": "Я хотел в тайне сказать что-то, но не знал о том, что максимальное количество людей, которым можно сказать что-то - 10."
+    },
+    "read": "Прочитать 📖",
+    "delete": "Удалить ❌",
     "notForYou": "Это сообщение не для тебя, мой маленький шпион. 👀",
     "outdated": "Ой.. Походу, это сообщение просрочено. 😢",
     "checkPM": "Сообщение было отправлено в личные сообщения с @keepitquiet_bot 📩",
@@ -34,5 +40,6 @@
         "title": "Если перед тэгом пользователя ввести ! (восклицательный знак), то получатель сможет прочитать сообщение только 1 раз! 🤔",
         "description": "Не знали! 😲",
         "message_text": "Представьте себе что я узнал? Оказывается, если перед тэгом пользователя ввести ! (восклицательный знак), то получатель сможет прочитать сообщение только 1 раз! 😲"
-    }
+    },
+    "deleted": "Сообщение было удалено. ❌"
 }
