--- a/translations/strings/ru.json
+++ b/translations/strings/ru.json
@@ -24,6 +24,11 @@
         "description": "Keep it Quiet!",
         "message_text": "Эй, {tags}, тут {sender} отправил тебе сообщение. 🤫"
     },
+    "onetimeSent": {
+        "title": "Отлично, теперь жми сюда, если ты всё уже дописал.",
+        "description": "Keep it Quiet!",
+        "message_text": "Эй, {tags}, тут {sender} отправил тебе одноразовое сообщение. 🤫"
+    },
     "moreThan10": {
         "title": "Максимальное количество тэгов - 10.",
         "description": "Keep it Quiet!",
@@ -31,6 +36,10 @@
     },
     "read": "Прочитать 📖",
     "delete": "Удалить ❌",
+    "whoReaded": "Читатели 👨‍👩‍👧‍👦",
+    "answer": "Ответить ✉",
+    "toSender": "Отправителю 📤",
+    "toRecipients": "Получателям 📥",
     "notForYou": "Это сообщение не для тебя, мой маленький шпион. 👀",
     "outdated": "Ой.. Походу, это сообщение просрочено. 😢",
     "checkPM": "Сообщение было отправлено в личные сообщения с @keepitquiet_bot 📩",
@@ -41,5 +50,9 @@
         "description": "Не знали! 😲",
         "message_text": "Представьте себе что я узнал? Оказывается, если перед тэгом пользователя ввести ! (восклицательный знак), то получатель сможет прочитать сообщение только 1 раз! 😲"
     },
-    "deleted": "Сообщение было удалено. ❌"
+    "deleted": "Сообщение было удалено. ❌",
+    "alreadyWasReaded": "Вы уже читали это сообщение. 😥",
+    "whoRead": "{amountOfReaders}/{maxAmountOfReaders} получателей прочитали это сообщение. ✉",
+    "answerText": "Зачем ты вообще тыкаешь на эти кнопки? 🤔",
+    "onlyForSender": "Эта кнопка только для отправителя! 😥"
 }
