--- a/translations/strings/ru.json
+++ b/translations/strings/ru.json
@@ -38,13 +38,13 @@
     "delete": "Удалить ❌",
     "whoReaded": "Читатели 👨‍👩‍👧‍👦",
     "answer": "Ответить ✉",
-    "toSender": "Отправителю 📤",
-    "toRecipients": "Получателям 📥",
+    "toSender": "Ответ отправителю 📤",
+    "toRecipients": "Ответ получателям 📥",
     "notForYou": "Это сообщение не для тебя, мой маленький шпион. 👀",
     "outdated": "Ой.. Походу, это сообщение просрочено. 😢",
     "checkPM": "Сообщение было отправлено в личные сообщения с @keepitquiet_bot 📩",
     "pleaseAllowPM": "Пожалуйста, разреши боту @keepitquiet_bot отправлять сообщения в личные сообщения. 😢",
-    "introduction": "Тс-с-с! Привет, {firstName}! ✋\nЯ - KIQ, ну или же Keep it Quiet. 💜\nЯ пытаюсь отправить сообщение твоему получателю настолько тихо, насколько это возможно! 🤫\n\nЧтобы использовать меня, зайди в любой чат, введи @keepitquiet_bot (тэг юзера) (сообщение) и нажми на всплывающую кнопку! 😊\nИнтересный факт: Если поставить восклицательный знак в начало сообщения, то получатель сможет прочитать сообщение только 1 раз. ☝\n\nКод бота: https://github.com/Tailium/KeepItQuiet 👩‍💻\nВерсия: v1.2.1 [⚙]\nРазработчики: @tailium 💚",
+    "introduction": "Тс-с-с! Привет, {firstName}! ✋\nЯ - KIQ, ну или же Keep it Quiet. 💜\nЯ пытаюсь отправить сообщение твоему получателю настолько тихо, насколько это возможно! 🤫\n\nЧтобы использовать меня, зайди в любой чат, введи @keepitquiet_bot (тэг юзера) (сообщение) и нажми на всплывающую кнопку! 😊\nИнтересный факт: Если поставить восклицательный знак в начало сообщения, то получатель сможет прочитать сообщение только 1 раз. ☝\n\nКод бота: https://github.com/Tailium/KeepItQuiet 👩‍💻\nВерсия: v1.2.2 [⚙]\nРазработчики: @tailium 💚",
     "tip": {
         "title": "Если перед тэгом пользователя ввести ! (восклицательный знак), то получатель сможет прочитать сообщение только 1 раз! 🤔",
         "description": "Не знали! 😲",
