--- a/translations/strings/ru.json
+++ b/translations/strings/ru.json
@@ -39,6 +39,11 @@
         "description": "Keep it Quiet!",
         "message_text": "Я хотел в тайне сказать что-то, но не знал о том, что максимальное количество людей, которым можно сказать что-то - 10."
     },
+    "tip": {
+        "title": "Использование бота",
+        "description": "Подсказочки для того, чтобы стать профессионалом в боте. 😲",
+        "message_text": "Существуют некоторые специальные символы, которыми вы можете помечать сообщение.\n\n\"!\" - Одноразовое сообщение.\nПолучатели смогут прочитать сообщение только 1 раз!\nПример использования:\n@keepitquiet_bot !someuser,somebabe Some legends are told...\n\n\"#\" - Скрыть получателя\nПомеченные этим символом получатели будут скрыты!\nПример использования:\n@keepitquiet_bot #someuser,#somebabe Тсс...\n\nСуществует ещё символ \"*\", но он зарезервирован для временных тэгов.\nЧто такое временный тэг? Это как @someuser, только внутри бота. И доступен только для пользователей без тэга.\nКаждые 24 часа тэг сбрасывается, поэтому каждые 24 часа надо его обновлять для дальнейшего получения сообщений."
+    },
     "read": "Прочитать 📖",
     "delete": "Удалить ❌",
     "whoReaded": "Читатели 👨‍👩‍👧‍👦",
@@ -49,17 +54,13 @@
     "outdated": "Ой.. Походу, это сообщение просрочено. 😢",
     "checkPM": "Сообщение было отправлено в личные сообщения с @keepitquiet_bot 📩",
     "pleaseAllowPM": "Пожалуйста, разреши боту @keepitquiet_bot отправлять сообщения в личные сообщения. 😢",
-    "introduction": "Тс-с-с! Привет, {firstName}! ✋\nЯ - KIQ, ну или же Keep it Quiet. 💜\nЯ пытаюсь отправить сообщение твоему получателю настолько тихо, насколько это возможно! 🤫\n\nЧтобы использовать меня, зайди в любой чат, введи @keepitquiet_bot (тэг юзера) (сообщение) и нажми на всплывающую кнопку! 😊\nИнтересный факт: Если поставить восклицательный знак в начало сообщения, то получатель сможет прочитать сообщение только 1 раз. ☝\n\nКод бота: https://github.com/Tailium/KeepItQuiet 👩‍💻\nВерсия: v1.3.2 [⚙]\nРазработчики: @tailium 💚",
-    "tip": {
-        "title": "Если перед тэгом пользователя ввести ! (восклицательный знак), то получатель сможет прочитать сообщение только 1 раз! 🤔",
-        "description": "Не знали! 😲",
-        "message_text": "Представьте себе что я узнал? Оказывается, если перед тэгом пользователя ввести ! (восклицательный знак), то получатель сможет прочитать сообщение только 1 раз! 😲"
-    },
+    "introduction": "Тс-с-с! Привет, {firstName}! ✋\nЯ - KIQ, ну или же Keep it Quiet. 💜\nЯ пытаюсь отправить сообщение твоему получателю настолько тихо, насколько это возможно! 🤫\n\nЧтобы использовать меня, зайди в любой чат, введи @keepitquiet_bot (тэг юзера) (сообщение) и нажми на всплывающую кнопку! 😊\nИнтересный факт: Если поставить восклицательный знак в начало сообщения, то получатель сможет прочитать сообщение только 1 раз. ☝\n\nКод бота: https://github.com/Tailium/KeepItQuiet 👩‍💻\nВерсия: v1.4.0 [⚙]\nРазработчики: @tailium 💚",
     "deleted": "Сообщение было удалено. ❌",
     "alreadyWasReaded": "Вы уже читали это сообщение. 😥",
     "whoRead": "{amountOfReaders}/{maxAmountOfReaders} получателей прочитали это сообщение. ✉",
     "answerText": "Зачем ты вообще тыкаешь на эти кнопки? 🤔",
     "onlyForSender": "Эта кнопка только для отправителя! 😥",
+    "hidden": "Скрыто 👻",
     "times": [
         ["день", "дня", "дней"],
         ["час", "часа", "часов"],
