--- a/translations/strings/uk.json
+++ b/translations/strings/uk.json
@@ -39,6 +39,11 @@
         "description": "Keep it Quiet!",
         "message_text": "Я хотів потай сказати щось, але не знав про те, що максимальна кількість людей, яким можна сказати щось - 10."
     },
+    "tip": {
+        "title": "Використання бота",
+        "description": "Підказочки для того, щоб стати професіоналом у боті. 😲",
+        "message_text": "Існують деякі спеціальні символи, якими ви можете написати повідомлення\n\n\"!\"- Одноразове повідомлення.\nОтримувачі можуть прочитати повідомлення лише 1 раз! \nПриклад використання:\n@keepitquiet_bot !someuser,somebabe Some legends are told...\n\n\"#\"- Приховати отримувача.\nПозначені цим символом отримувачі будуть приховані.\nПриклад використання:\n@keepitquiet_bot #someuser,#somebabe Тсс...\n\nІснує ще символ \"*\", але він зарезервован лише для тимчасових тегів. \nЩо таке тимчасовий тег? Це як @someuser, тільки всередині бота. И доступний лише для користувачів без тегів.\nКожні 24 години тег скидається, тому кожні 24 години треба його оновлювати для подальшого отримання повідомлень."
+    },
     "read": "Прочитати 📖",
     "delete": "Видалити ❌",
     "whoReaded": "Читачі 👨‍👩‍👧‍👦",
@@ -49,17 +54,13 @@
     "outdated": "Ой... Схоже, це повідомлення прострочене. 😢",
     "checkPM": "Повідомлення було надіслано в приватні повідомлення з @keepitquiet_bot 📩",
     "pleaseAllowPM": "Будь ласка, дозволь боту @keepitquiet_bot надсилати повідомлення в приватні повідомлення. 😢",
-    "introduction": "Тс-с-с! Привіт, {firstName}! ✋\nЯ - KIQ, ну або ж Keep it Quiet. 💜\nЯ намагаюся відправити повідомлення твоєму одержувачу настільки тихо, наскільки це можливо! 🤫\n\n\nЩоб використати мене, зайди в будь-який чат, введи @keepitquiet_bot (тег юзера) (повідомлення) і натисни на кнопку, що спливає! 😊\nІнтересний факт: Якщо поставити знак оклику на початок повідомлення, то одержувач зможе прочитати повідомлення тільки 1 раз. ☝\n\n\n\nКод бота: https://github.com/Tailium/KeepItQuiet 👩‍💻\n\nВерсія: v1.3.2 [⚙]\nРозробники: @tailium 💚",
-    "tip": {
-        "title": "Якщо перед тегом користувача ввести ! (знак оклику), то одержувач зможе прочитати повідомлення тільки 1 раз! 🤔",
-        "description": "Не знали! 😲",
-        "message_text": "Уявіть собі що я дізнався? Виявляється, якщо перед тегом користувача ввести ! (знак оклику), то одержувач зможе прочитати повідомлення тільки 1 раз! 😲"
-    },
+    "introduction": "Тс-с-с! Привіт, {firstName}! ✋\nЯ - KIQ, ну або ж Keep it Quiet. 💜\nЯ намагаюся відправити повідомлення твоєму одержувачу настільки тихо, наскільки це можливо! 🤫\n\n\nЩоб використати мене, зайди в будь-який чат, введи @keepitquiet_bot (тег юзера) (повідомлення) і натисни на кнопку, що спливає! 😊\nІнтересний факт: Якщо поставити знак оклику на початок повідомлення, то одержувач зможе прочитати повідомлення тільки 1 раз. ☝\n\n\n\nКод бота: https://github.com/Tailium/KeepItQuiet 👩‍💻\n\nВерсія: v1.4.0 [⚙]\nРозробники: @tailium 💚",
     "deleted": "Повідомлення було видалено. ❌",
     "alreadyWasReaded": "Ви вже читали це повідомлення. 😥",
     "whoRead": "{amountOfReaders}/{maxAmountOfReaders} одержувачів прочитали це повідомлення. ✉",
     "answerText": "Навіщо ти взагалі тикаєш на ці кнопки? 🤔",
     "onlyForSender": "Ця кнопка тільки для відправника! 😥",
+    "hidden": "Приховано 👻",
     "times": [
         ["день", "дня", "днів"],
         ["година", "години", "годин"],
